# LawTracker

./: .dockerignore  .gitignore  CLAUDE.md  COMPLETED.md  Dockerfile  README.md  ROADMAP.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
design/: README.md  admin-app.md  architecture.md  data-scout.md  deployment.md  source-adapter-framework.md  sources.md
src/lawtracker/: __main__.py  analysis.py  article_summary.py  cli.py  llm.py  llm_cache.py  preview.py  scout.py  translate.py  web.py
src/lawtracker/sources/: __init__.py  _filters.py  afp_foreign_bribery.py  base.py  consejo_transparencia_cl.py  doj_fcpa_actions.py  fiscalia_chile.py  foley_llp.py  gibson_dunn.py  global_anticorruption_blog.py  harvard_corpgov_fcpa.py  miller_chevalier.py  rss_feed.py  sec_fcpa_cases.py  volkov_law.py
tests/: conftest.py  test_afp_foreign_bribery.py  test_analysis.py  test_article_summary.py  test_cli.py  test_doj_fcpa_actions.py  test_fiscalia_chile.py  test_law_firm_blogs.py  test_llm.py  test_llm_cache.py  test_miller_chevalier.py  test_preview.py  test_rss_feed.py  test_scout.py  test_sec_fcpa_cases.py  test_sources_base.py  test_translate.py
tests/fixtures/: afp_foreign_bribery.html  consejo_transparencia_cl.xml  doj_fcpa_actions.html  fiscalia_chile.html  foley_llp.xml  gibson_dunn.xml  global_anticorruption_blog.xml  harvard_corpgov_fcpa.xml  miller_chevalier_publications.html  volkov_law.xml
