[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawtracker"
version = "0.1.0"
description = "Track when specific laws are updated."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tom Holmes" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    "openpyxl>=3.1",
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
lawtracker = "lawtracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[[tool.mypy.overrides]]
module = ["openpyxl.*", "curl_cffi.*"]
ignore_missing_imports = true
